tests/baselines/reference/lateBoundAssignmentCandidateJS3.errors.txt
index.js(5,9): error TS2322: Type 'number' is not assignable to type 'string'.


==== index.js (1 errors) ====
    const prop = 'prop';
    
    export class foo2 {
        constructor() {
            this[prop] = 12;
            ~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        }
    
        /**
         * @protected
         * @type {string}
         */
        prop = 'baz';
    }
    